cmake_minimum_required(VERSION 3.20)
project(MyProject)

set(CMAKE_CXX_STANDARD 17)

add_executable(MyProject main.cpp function_1.h function_1.cpp function_2.h function_2.cpp function_3.h function_3.cpp function_4.h function_4'.cpp function_5.h function_5.cpp function_6.h function_6.cpp function_7.h function_7.cpp function_8.h function_8.cpp function_9.h function_9.cpp function_10.h function_10.cpp)
